<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvAndroidVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="15sp"
        android:text="@string/tvVersionAndroid" />

    <TextView
        android:id="@+id/tvAndroidVersionLB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="" />

    <TextView
        android:id="@+id/tvBluetooth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="15sp"
        android:text="@string/tvBluet" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        >

        <Button
            android:id="@+id/btnDesactivar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/btnDesactivar"
            app:layout_constraintEnd_toStartOf="@+id/btnActivar"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="0dp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btnActivar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/btnActivar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnDesactivar"
            tools:layout_editor_absoluteY="0dp"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvBatteryLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="15sp"
        android:text="@string/tvBatteryLevel" />

    <ProgressBar
        android:id="@+id/pbBattery"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="" />

    <TextView
        android:id="@+id/tvAlmacenamiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="15sp"
        android:text="@string/tvAlmacenamiento" />

    <EditText
        android:id="@+id/etNombreArchivo"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:padding="8dp"
        android:hint="@string/etNombreArchivo"
        android:text="" />

    <Button
        android:id="@+id/btnGuardarArchivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:srcCompat="@android:drawable/ic_menu_save"
        android:text="Guardar Archivo"
        />

    <TextView
        android:id="@+id/tvConection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="15sp"
        android:text="@string/tvConection" />

    <TextView
        android:id="@+id/tvState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="" />

    <Button
        android:id="@+id/btnBluetooth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnBluetooth" />

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCamera" />
</LinearLayout>